Integrated 1Harmony.dll (v2 Harmony) natively

--- a/Carbon.Core/Carbon/Properties/Resources.resx
+++ b/Carbon.Core/Carbon/Properties/Resources.resx
@@ -118,6 +118,9 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="1Harmony" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\1Harmony.dll;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
   <data name="Humanlights.System" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Humanlights.System.dll;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
