--- a/Carbon.Core/Carbon/Properties/Resources.resx
+++ b/Carbon.Core/Carbon/Properties/Resources.resx
@@ -15,8 +15,8 @@
     ... ado.net/XML headers & schema ...
     <resheader name="resmimetype">text/microsoft-resx</resheader>
     <resheader name="version">2.0</resheader>
-    <resheader name="reader">System.Resources.ResXResourceReader, System.Windows.Forms, ...</resheader>
-    <resheader name="writer">System.Resources.ResXResourceWriter, System.Windows.Forms, ...</resheader>
+    <resheader name="reader">System.Resources.ResXResourceReader, ...</resheader>
+    <resheader name="writer">System.Resources.ResXResourceWriter, ...</resheader>
     <data name="Name1"><value>this is my long string</value><comment>this is a comment</comment></data>
     <data name="Color1" type="System.Drawing.Color, System.Drawing">Blue</data>
     <data name="Bitmap1" mimetype="application/x-microsoft.net.object.binary.base64">
@@ -112,25 +112,24 @@
     <value>2.0</value>
   </resheader>
   <resheader name="reader">
-    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceReader, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <resheader name="writer">
-    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceWriter, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="1Harmony" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="1Harmony" type="System.Resources.ResXFileRef">
     <value>..\Resources\1Harmony.dll;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="Humanlights.System" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="Humanlights.System" type="System.Resources.ResXFileRef">
     <value>..\Resources\Humanlights.System.dll;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="Humanlights.Unity" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="Humanlights.Unity" type="System.Resources.ResXFileRef">
     <value>..\Resources\Humanlights.Unity.dll;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="protobuf-net" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="protobuf-net" type="System.Resources.ResXFileRef">
     <value>..\Resources\protobuf-net.dll;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="protobuf-net.Core" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="protobuf-net.Core" type="System.Resources.ResXFileRef">
     <value>..\Resources\protobuf-net.Core.dll;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
 </root>
